--- a/index.html
+++ b/index.html
@@ -1,154 +1,141 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who Am I - Paulo Marques | MOSCHIAT</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            color: #212529;
-            text-align: center;
-            overflow: hidden;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        .content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            transition: opacity 1s;
-        }
-
-        .fade-in {
-            opacity: 0;
-            animation: fadeIn 3s forwards;
-        }
-
-        @keyframes fadeIn {
-            to {
-                opacity: 1;
-            }
-        }
-
-        h1 {
-            font-size: 3rem;
-            color: #212529;
-        }
-
-        .lead {
-            font-size: 1.25rem;
-            color: #495057;
-        }
-
-        .text-muted {
-            font-size: 1rem;
-            color: #6c757d;
-        }
-
-        .btn-dark {
-            padding: 10px 20px;
-            font-size: 1rem;
-            border-radius: 5px;
-        }
-
-        .poem {
-            display: none;
-            font-size: 1.25rem;
-            color: #495057;
-            margin-top: 20px;
-        }
-
-        .short-text {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-
-        .container {
-            position: relative;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Who Am I - Paulo Marques | MOSCHIAT</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <style>
+    /* Reset e configuração básica */
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      color: #212529;
+    }
+    main {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+    .hidden {
+      display: none;
+    }
+    .content {
+      transition: opacity 1s;
+    }
+    .fade-in {
+      opacity: 0;
+      animation: fadeIn 3s forwards;
+    }
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
+    }
+    h1 {
+      font-size: 3rem;
+    }
+    .lead {
+      font-size: 1.25rem;
+    }
+    .short-text {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+    .btn-dark {
+      padding: 10px 20px;
+      font-size: 1rem;
+      border-radius: 5px;
+    }
+    .poem {
+      font-size: 1.25rem;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
+  <main>
+    <section id="intro" class="content">
+      <h1 class="fw-bold">Paulo Marques</h1>
+      <p class="lead">Designer UX/UI & Desenvolvedor Python</p>
+    </section>
 
-    <div class="container">
-        <div id="intro" class="content">
-            <h1 class="fw-bold">Paulo Marques</h1>
-            <p class="lead">Designer UX/UI & Desenvolvedor Python</p>
-        </div>
+    <section id="whoami" class="content hidden">
+      <p class="short-text">Eu sou apaixonado por criar experiências digitais.</p>
+    </section>
 
-        <div id="whoami" class="content hidden">
-            <p class="short-text">Eu sou apaixonado por criar experiências digitais.</p>
-        </div>
+    <section id="poem1" class="poem hidden">
+      <p>
+        Nos campos de luz e cor,<br>
+        A vida dança, brilha e canta,<br>
+        Cada dia um novo amor,<br>
+        A esperança é a nossa manta.
+      </p>
+    </section>
 
-        <div id="poem1" class="poem hidden">
-            <p>Nos campos de luz e cor,<br>
-            A vida dança, brilha e canta,<br>
-            Cada dia um novo amor,<br>
-            A esperança é a nossa manta.</p>
-        </div>
+    <section id="poem2" class="poem hidden">
+      <p>
+        Em cada código, há um mundo,<br>
+        Um universo por desvendar,<br>
+        Com cada linha, eu me aprofundo,<br>
+        Para sempre inovar.
+      </p>
+    </section>
 
-        <div id="poem2" class="poem hidden">
-            <p>Em cada código, há um mundo,<br>
-            Um universo por desvendar,<br>
-            Com cada linha, eu me aprofundo,<br>
-            Para sempre inovar.</p>
-        </div>
+    <section id="poem3" class="poem hidden">
+      <p>
+        A arte de criar e transformar,<br>
+        No design, encontramos o nosso ser,<br>
+        Cada pixel, uma história a contar,<br>
+        Com cada projeto, um novo amanhecer.
+      </p>
+    </section>
 
-        <div id="poem3" class="poem hidden">
-            <p>A arte de criar e transformar,<br>
-            No design, encontramos o nosso ser,<br>
-            Cada pixel, uma história a contar,<br>
-            Com cada projeto, um novo amanhecer.</p>
-        </div>
+    <section id="button" class="content hidden">
+      <a href="#" class="btn btn-dark">Saiba mais</a>
+    </section>
+  </main>
 
-        <div id="button" class="content hidden">
-            <a href="#" class="btn btn-dark">Saiba mais</a>
-        </div>
-    </div>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const sequence = [
+        { id: 'intro', delay: 3000, next: 'whoami' },
+        { id: 'whoami', delay: 3000, next: 'poem1' },
+        { id: 'poem1', delay: 3000, next: 'poem2' },
+        { id: 'poem2', delay: 3000, next: 'poem3' },
+        { id: 'poem3', delay: 3000, next: 'button' },
+      ];
 
-    <script>
-        setTimeout(() => {
-            document.getElementById('intro').classList.add('hidden');
-            document.getElementById('whoami').classList.remove('hidden');
-        }, 3000);
+      let index = 0;
+      const runSequence = () => {
+        if (index < sequence.length) {
+          const current = sequence[index];
+          // Esconde o elemento atual
+          document.getElementById(current.id).classList.add('hidden');
+          // Exibe o próximo elemento, se existir
+          if (current.next) {
+            const nextElement = document.getElementById(current.next);
+            nextElement.classList.remove('hidden');
+            // Aplica efeito de fade-in para elementos de transição
+            if (current.next.startsWith('poem') || current.next === 'whoami') {
+              nextElement.classList.add('fade-in');
+            }
+          }
+          index++;
+          if (index < sequence.length) {
+            setTimeout(runSequence, sequence[index - 1].delay);
+          }
+        }
+      };
 
-        setTimeout(() => {
-            document.getElementById('whoami').classList.add('hidden');
-            document.getElementById('poem1').classList.remove('hidden');
-            document.getElementById('poem1').classList.add('fade-in');
-        }, 6000);
-
-        setTimeout(() => {
-            document.getElementById('poem1').classList.add('hidden');
-            document.getElementById('poem2').classList.remove('hidden');
-            document.getElementById('poem2').classList.add('fade-in');
-        }, 9000);
-
-        setTimeout(() => {
-            document.getElementById('poem2').classList.add('hidden');
-            document.getElementById('poem3').classList.remove('hidden');
-            document.getElementById('poem3').classList.add('fade-in');
-        }, 12000);
-
-        setTimeout(() => {
-            document.getElementById('poem3').classList.add('hidden');
-            document.getElementById('button').classList.remove('hidden');
-        }, 15000);
-    </script>
-
+      setTimeout(runSequence, sequence[0].delay);
+    });
+  </script>
 </body>
 </html>
